# Rusty

./: Cargo.toml  LICENSE  README.md
Instructions/: install-git-bash.md  install-msys2.md  install-wsl.md
Lab1/tests/: cli.rs
Lab2/circle/: Cargo.toml
Lab2/circle/src/: main.rs
Lab2/circle/tests/: cli.rs
Lab2/echor/src/: main.rs
Lab2/echor/tests/: cli.rs
Lab3/catr/src/: lib.rs
Lab3/slope/: Cargo.toml
Lab3/slope/src/: lib.rs  main.rs
Lab3/slope/tests/: unit.rs
Lab3/triangle/tests/: cli.rs
homework_2/circle_area/: Cargo.toml
homework_2/circle_area/src/: main.rs
homework_2/circle_area/tests/: cli.rs
homework_2/player/: Cargo.toml
homework_2/player/src/: main.rs
homework_2/player/tests/: cli.rs
homework_2/temperature_c_to_f/: Cargo.toml
homework_2/temperature_c_to_f/src/: main.rs
homework_2/temperature_c_to_f/tests/: cli.rs
homework_2/temperature_f_to_c/: Cargo.toml
homework_2/temperature_f_to_c/src/: main.rs
homework_2/temperature_f_to_c/tests/: cli.rs
lab_1/: Cargo.toml
lab_1/tests/: cli.rs
lab_2/: Cargo.toml
lab_2/circle_circumference/: Cargo.toml
lab_2/circle_circumference/tests/: cli.rs
lab_2/greeting/: Cargo.toml
lab_2/greeting/src/: main.rs
lab_2/greeting/tests/: cli.rs
lab_3/catr/src/: lib.rs  main.rs
lab_3/triangle/src/: main.rs
lab_4/count/src/: main.rs
lab_4/headr/: Cargo.toml
lab_4/headr/src/: lib.rs
lab_4/quote/src/: main.rs
